--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,7 @@ h1{
     font-weight: 300 !important;
     font-size: calc(1.375rem + 1.5vw) !important;
     text-align: center !important;
+    max-width: 700px;
 }
 .form-control{
     max-height: 6rem;
@@ -24,14 +25,34 @@ h1{
 }
 .mb-4{
     margin-bottom: 1rem !important;
+    margin: auto !important;
 }
 tr{
     background-color: #cfcfcf;
 }
+.tart{
+    position: fixed; /* Hace que el elemento flote en relación a la ventana */
+    bottom: 20px; /* Ajusta la distancia desde la parte superior */
+    right: 20px; /* Ajusta la distancia desde la parte derecha */
+    background-color: rgb(223, 223, 223); /* Fondo semitransparente */
+    color: rgb(27, 27, 27); /* Color del texto */
+    padding: 10px 15px; /* Espaciado interno */
+    border-radius: 8px; /* Bordes redondeados */
+    z-index: 9999; /* Asegura que esté por encima de todo */
+    font-size: 12px; /* Tamaño del texto */
+    box-shadow: 5px 5px 30px 3px rgba(61, 61, 61, 0.568); /* Sombra */
+}
 
 @media (max-width: 500px) {
+    h1{
+        font-size: 22px !important;
+    }
     .mb-3{
         margin-top: 0px !important;
+    }
+    .tart{
+        font-size: 8px;
+        bottom: 20px;
     }
     .form-control{
         font-size: 14px;
