--- a/templates/test.html
+++ b/templates/test.html
@@ -11,13 +11,14 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4">Asistente de Laboratorio UPAO</h1>
+        <h1 class="mb-4">Asistente de Laboratorio Para Medicina Humana UPAO</h1>
         <div class="request">
             <textarea id="pregunta" class="form-control mb-3" rows="2" placeholder="Escribe tu pregunta aquí..."></textarea>
             <button class="btn btn-primary-css ask-button mb-3" onclick="hacerPregunta()"> <i class="fas fa-paper-plane"></i> </button>
         </div>
         
         <div id="historial" class="response-container p-3 border" style="height: 300px; overflow-y: auto; background-color: #f8f9fa;"></div>
+        <div class="tart"> <strong>Mg. Raúl Zabala </strong>| W</div>
     </div>
     <script src="/static/main.js">
         
