--- a/static/styles.css
+++ b/static/styles.css
@@ -34,13 +34,13 @@ tr{
     position: fixed; /* Hace que el elemento flote en relación a la ventana */
     bottom: 20px; /* Ajusta la distancia desde la parte superior */
     right: 20px; /* Ajusta la distancia desde la parte derecha */
-    background-color: rgb(223, 223, 223); /* Fondo semitransparente */
+    background-color: rgb(255, 255, 255); /* Fondo semitransparente */
     color: rgb(27, 27, 27); /* Color del texto */
     padding: 10px 15px; /* Espaciado interno */
     border-radius: 8px; /* Bordes redondeados */
     z-index: 9999; /* Asegura que esté por encima de todo */
     font-size: 12px; /* Tamaño del texto */
-    box-shadow: 5px 5px 30px 3px rgba(61, 61, 61, 0.568); /* Sombra */
+    box-shadow: 5px 5px 10px 3px rgba(61, 61, 61, 0.568); /* Sombra */
 }
 
 @media (max-width: 500px) {
@@ -60,7 +60,7 @@ tr{
     .response-container {
         border-radius: 5px;
         padding-top: 10px;
-        box-shadow: 2px 5px 10px 5px #85929e;
+        box-shadow: 2px 5px 10px 5px #bdbdbd9f;
         font-size: 12px;
         margin: auto;
         padding: 5px !important;
