--- a/templates/test.html
+++ b/templates/test.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4">Asistente de Laboratorio Para Medicina Humana UPAO</h1>
+        <h1 class="mb-4">Asistente de Laboratorio: Medicina Humana - UPAO</h1>
         <div class="request">
             <textarea id="pregunta" class="form-control mb-3" rows="2" placeholder="Escribe tu pregunta aquí..."></textarea>
             <button class="btn btn-primary-css ask-button mb-3" onclick="hacerPregunta()"> <i class="fas fa-paper-plane"></i> </button>
