--- a/templates/test.html
+++ b/templates/test.html
@@ -18,7 +18,7 @@
         </div>
         
         <div id="historial" class="response-container p-3 border" style="height: 300px; overflow-y: auto; background-color: #f8f9fa;"></div>
-        <div class="tart"> <strong>Mg. Raúl Zabala </strong>| W</div>
+        <div class="tart"> <strong>Mg. Raúl Zavala </strong>| W</div>
     </div>
     <script src="/static/main.js">
         
